rnsc/test_data/integration/error/parser/instructions/ldc_without_operands2.rns
.class LdcWithoutOperand
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc
    return
  .code_end
.method_end
.class_end
